--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -33,6 +34,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_margin="5dp"
+                    android:id="@+id/login"
                     android:text="로그인"
                     android:textSize="17sp"
                     android:background="@drawable/round_button"
@@ -42,6 +44,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_margin="5dp"
+                    android:id="@+id/join"
                     android:text="회원가입"
                     android:textSize="17sp"
                     android:background="@drawable/round_button"
@@ -51,6 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="60dp"
                     android:layout_margin="5dp"
+                    android:id="@+id/not_join"
                     android:text="비회원가입"
                     android:textSize="17sp"
                     android:background="@drawable/round_button"
@@ -59,3 +63,4 @@
             </LinearLayout>
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
